# variant_detection

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/dipsvfilter/: kmer_filter_contig_pairs.py  realign_with_sec.py  utils.py
src/dipsvfilter/construct_haps/: construct_haplotypes.py  vcf_preprocessing.py
src/dipsvfilter/featurizers/: encode_read_alignment.py  extract_mamnet_features.py  generate_labeled_data.py  parse_sample_specific_strings.py
src/dipsvfilter/models/: architecture.py  train.py
src/featurizers/: extract_cutesv_indels.py  extract_mamnet_features.py  parse_sample_specific_strings.py
src/models/: architecture.py  inference.py  prepare.py  program.md  train.py
